Created Navigation to 3 pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to Software Design</h1>
+        <h1>Vertical Tank Maintenance</h1>
         <hr>
         <br>
+        <a href="http://127.0.0.1:5000/">Home</a>
+        <a href="http://127.0.0.1:5000/about">About</a>
+        <a href="http://127.0.0.1:5000/estimate">Estimator</a>
+
         
         {% block body %}
 
