--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} VTM Page {% endblock %}
+{% block title %} VTM Estimator {% endblock %}
 
 
 {% block body %} 
