--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,13 @@
         <h1>Vertical Tank Maintenance</h1>
         <hr>
         <br>
+        <div style = "text-align:center">
         <a href="http://127.0.0.1:5000/">Home</a>
         <a href="http://127.0.0.1:5000/about">About</a>
         <a href="http://127.0.0.1:5000/estimate">Estimator</a>
-
-        
+        </div>
+        <hr>
+        <br>
         {% block body %}
 
         {% endblock %}
