Inserted jpeg, inserted dummy text

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to the About Page {% endblock %}
-
+{% block title %} Welcome to the home page {% endblock %}
 
 {% block body %} 
-<section>
-    <div class="header">
-        <h2>About Vertical Tank Maintenance</h2>
-    </div>
-</section>
 
-
+<body>
+    <main>
+        <section>
+            <img src="/photos_hw9/above_ground_vertical_tanks.jpeg" alt="Photo of Vertical Tanks">
+        </section>
 
 <br>
 
@@ -23,5 +21,6 @@ Curabitur nulla justo, hendrerit ut turpis sed, rhoncus finibus urna. Curabitur 
 Curabitur consequat augue dolor. Sed ac metus hendrerit sapien malesuada luctus ut sit amet ante. Phasellus sed quam nunc. Duis convallis non magna eget posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec efficitur vel ligula vitae pulvinar. Curabitur id lectus felis. Ut at risus vitae orci porttitor congue in ullamcorper neque. Aenean semper dignissim orci vel sollicitudin. Integer erat turpis, rutrum sit amet mattis eu, dapibus ut felis. Nam porttitor lorem accumsan enim porta hendrerit. Integer rutrum fermentum fermentum. Aenean dignissim mauris non nisl sollicitudin pharetra. Proin consequat nunc vel tempus lacinia. Donec non felis nec arcu dapibus posuere.
 
 Suspendisse iaculis, risus eget pulvinar euismod, magna risus maximus nunc, a placerat dui purus in nunc. Integer ut malesuada erat. Nam sollicitudin a orci ac fringilla. Morbi vestibulum sollicitudin gravida. Cras eu odio ut odio ultrices pharetra sed at nisl. Maecenas ac commodo mauris. Vivamus facilisis urna eleifend dolor vestibulum mattis.
-
+    </main>
+</body>
 {% endblock %}
