--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,5 @@
+
+
 {% extends 'base.html' %}
 
 {% block title %} Welcome to the About Page {% endblock %}
@@ -5,8 +7,8 @@
 
 {% block body %} 
 <section>
-    <div class="header">
-        <h2>About Vertical Tank Maintenance</h2>
+    <div>
+        <h2 class = "myheader">About Vertical Tank Maintenance</h2>
     </div>
 </section>
 
