Styling, President img centered

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,6 +9,7 @@
 <section>
     <div>
         <h2 class = "myheader">About Vertical Tank Maintenance</h2>
+        <img src="/static/hw9_placeholder.png" alt="President of Vertical Tank Maitenance" class="center">
     </div>
 </section>
 
