--- a/templates/index.html
+++ b/templates/index.html
@@ -6,19 +6,21 @@
 
     <main>
         <section>
-            <img src="/static/above_ground_vertical_tanks.jpeg" alt="Photo of Vertical Tanks">
+
+        <img src="/static/above_ground_vertical_tanks.jpeg" alt="Photo of Vertical Tanks" align="left" hspace=20>
+        
+
+        <div class="dummytext">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in est sapien. Phasellus commodo sodales purus eu imperdiet. In lacinia velit eget nibh cursus congue. Ut sodales diam ut metus lacinia, eu aliquet metus egestas. Proin ante magna, tincidunt ac finibus sed, tincidunt nec eros. Integer et tellus felis. Quisque non dui sit amet est commodo gravida nec sed massa. Integer imperdiet velit vel ante iaculis, ut sollicitudin augue malesuada. Sed a gravida eros, at tincidunt nisi. Praesent erat lectus, ullamcorper non luctus ac, pulvinar sed justo. Nullam in est quis lacus aliquet auctor eu a mauris. Mauris neque orci, scelerisque non maximus eget, tincidunt in metus.
+
+Curabitur aliquet purus eros, a pellentesque felis rutrum vitae. Sed tincidunt et lacus non rhoncus. Nullam odio lorem, sagittis a urna quis, blandit fermentum ipsum. Pellentesque eu sagittis leo, nec ultricies risus. Etiam dapibus consequat consectetur. Etiam ac metus metus. Proin varius nec elit ac varius. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse sem est, condimentum a arcu a, blandit ornare ex. Donec fringilla eget felis viverra hendrerit. Vivamus sed risus eu justo vehicula varius ut ac mauris. Vestibulum cursus sodales nulla sed imperdiet. Vivamus venenatis nulla sagittis, aliquet magna eget, imperdiet est. Maecenas lorem eros, porttitor a laoreet et, finibus ut ante.
+
+Pellentesque vel sem et nisl gravida rutrum sit amet varius lorem. Etiam vulputate vitae odio vel suscipit. Sed at nisi velit. Nulla facilisi. Duis condimentum turpis leo, id auctor urna ullamcorper et. Sed purus lacus, tincidunt at mi sed, iaculis rutrum arcu. Quisque iaculis, arcu vel tempor blandit, enim justo pretium velit, et fermentum tellus arcu eu magna. Phasellus non dui elementum, elementum arcu id, sodales lorem. Suspendisse semper tincidunt semper. Maecenas sed lorem pulvinar, dapibus massa eget, commodo est. Curabitur sed justo erat. Aenean in mollis magna, at lacinia quam. Aenean vel urna eu enim auctor ullamcorper et vel orci.
+
+Mauris non lacinia purus. Nunc rutrum, orci vitae pulvinar consequat, nisl leo auctor lectus, at sodales odio lacus a nunc. Ut eu porttitor sem. Duis eget dui nisi. Quisque euismod et enim id suscipit. Ut ornare diam massa, quis viverra augue viverra et. Mauris rhoncus lorem eu posuere tincidunt. Praesent maximus sapien id neque dapibus condimentum. Vivamus ut felis quis dolor aliquam sagittis et sed turpis. Aenean malesuada ex iaculis quam blandit consequat. Maecenas luctus scelerisque odio nec vestibulum. Aenean sodales nisl quis accumsan auctor. Integer tempor auctor tincidunt. Phasellus dapibus, libero a ullamcorper consequat, nulla odio elementum felis, vitae egestas ligula eros molestie nibh.
+
+Suspendisse tincidunt massa enim, sed facilisis enim interdum quis. Aliquam sed dolor nec magna venenatis tincidunt. Proin dignissim quam euismod neque accumsan porta. Proin rhoncus orci quis vehicula efficitur. Quisque massa ex, scelerisque quis dui vel, feugiat maximus dolor. Proin quis ligula varius, pellentesque odio in, viverra dui. Nulla quis erat et mi hendrerit ultrices at ac nisl. Proin fringilla libero lorem, vitae vulputate purus semper vel. Nullam purus nibh, fermentum ac urna eget, lobortis viverra mauris. Praesent sed mi vel libero posuere egestas. Nam quis venenatis nisl. Etiam eleifend felis eu metus molestie efficitur. Phasellus eu augue ipsum. Etiam commodo tempus ligula, a dictum purus aliquet sit amet. Nunc ut dui tristique, placerat metus id, gravida diam.
+        </div>
         </section>
-
-<br>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc libero risus, scelerisque id rhoncus vitae, facilisis posuere leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc placerat magna odio, ac bibendum nisl condimentum vitae. Aliquam pulvinar dignissim tellus a elementum. Nulla facilisi. Proin molestie fringilla ipsum sed convallis. Vivamus ipsum mauris, venenatis sit amet massa at, imperdiet tincidunt nibh. Sed pellentesque nec metus sed porta. Nam pretium molestie cursus. Praesent laoreet tempor est, vel hendrerit purus convallis in. In ac tellus scelerisque ex vulputate ultricies et vel lectus.
-<br><br>
-In molestie ullamcorper nisl et blandit. Suspendisse ac urna blandit, dictum neque et, tempus purus. Pellentesque sit amet turpis non elit finibus pellentesque. Praesent feugiat bibendum mollis. Proin efficitur gravida massa. Maecenas at auctor dui, sit amet malesuada purus. Donec ultricies pretium felis, eu ornare ligula dignissim nec.
-
-Curabitur nulla justo, hendrerit ut turpis sed, rhoncus finibus urna. Curabitur rutrum non dolor a pulvinar. Integer fermentum turpis eu leo tincidunt rutrum. Nunc ut augue ut arcu ullamcorper euismod. Etiam finibus, nulla et posuere pretium, leo sapien aliquet leo, ut tempor mauris mi vitae mauris. Phasellus hendrerit, est id dictum consectetur, risus nisi cursus lectus, ut facilisis lectus lectus faucibus nulla. Sed fringilla semper convallis. In vulputate nibh lacinia lacus posuere laoreet.
-<br><br>
-Curabitur consequat augue dolor. Sed ac metus hendrerit sapien malesuada luctus ut sit amet ante. Phasellus sed quam nunc. Duis convallis non magna eget posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec efficitur vel ligula vitae pulvinar. Curabitur id lectus felis. Ut at risus vitae orci porttitor congue in ullamcorper neque. Aenean semper dignissim orci vel sollicitudin. Integer erat turpis, rutrum sit amet mattis eu, dapibus ut felis. Nam porttitor lorem accumsan enim porta hendrerit. Integer rutrum fermentum fermentum. Aenean dignissim mauris non nisl sollicitudin pharetra. Proin consequat nunc vel tempus lacinia. Donec non felis nec arcu dapibus posuere.
-
-Suspendisse iaculis, risus eget pulvinar euismod, magna risus maximus nunc, a placerat dui purus in nunc. Integer ut malesuada erat. Nam sollicitudin a orci ac fringilla. Morbi vestibulum sollicitudin gravida. Cras eu odio ut odio ultrices pharetra sed at nisl. Maecenas ac commodo mauris. Vivamus facilisis urna eleifend dolor vestibulum mattis.
     </main>
 {% endblock %}
