--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -4,5 +4,15 @@ body{
 
 .myheader{
     text-align: center;
-    color: aqua;
 }
+
+.dummytext{
+    margin: 20px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+  }
