Cost Estimate String-FinalCommit

--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -21,7 +21,7 @@
 
 
 {% if myValue %}
-<p> The sum of the two numbers is: {{ myValue }}</p>
+<p> The cost estimate is: {{ myValue }}</p>
 {% endif %}
 
 {% endblock %}
