--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
         <hr>
         <br>
         <div style = "text-align:center">
-        <a href="http://127.0.0.1:5000/">Home</a> &nbsp; &nbsp; 
-        <a href="http://127.0.0.1:5000/about">About</a> &nbsp; &nbsp;
-        <a href="http://127.0.0.1:5000/estimate">Estimator</a>
+        <a href="./">Home</a> &nbsp; &nbsp; 
+        <a href="./about">About</a> &nbsp; &nbsp;
+        <a href="./estimate">Estimator</a>
         </div>
         <hr>
         <br>
